// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connection › Router > History Initializes blank if not populated 1`] = `
Object {
  "hash": "",
  "pathname": "/",
  "search": "",
  "state": undefined,
}
`;

exports[`Connection › Router > History Initializes url if populated 1`] = `
Object {
  "hash": "",
  "pathname": "/wp-cat/nature/",
  "search": "",
  "state": Object {
    "context": Object {
      "columns": Array [
        Array [
          Object {
            "id": 7,
            "page": 1,
            "type": "category",
          },
          Object {
            "id": 7,
            "page": 2,
            "type": "category",
          },
        ],
        Array [
          Object {
            "id": 57,
            "type": "post",
          },
        ],
        Array [
          Object {
            "id": 54,
            "type": "post",
          },
        ],
      ],
    },
    "method": "push",
    "selectedItem": Object {
      "extract": null,
      "id": 7,
      "mstId": "0_category_7_page_1",
      "page": 1,
      "type": "category",
      "visited": true,
    },
  },
}
`;

exports[`Connection › Router > History dispatchs succeed when 'push' (history length increases) 1`] = `
Object {
  "hash": "",
  "pathname": "/wp-cat/nature/page/2",
  "search": "",
  "state": Object {
    "context": null,
    "method": "push",
    "selectedItem": Object {
      "id": 7,
      "page": 2,
      "type": "category",
    },
    "type": "connection/ROUTE_CHANGE_SUCCEED",
  },
}
`;

exports[`Connection › Router > History dispatchs succeed when 'push' (history length increases) 2`] = `
Array [
  Object {
    "context": null,
    "method": "push",
    "selectedItem": Object {
      "id": 7,
      "page": 2,
      "type": "category",
    },
    "type": "connection/ROUTE_CHANGE_SUCCEED",
  },
]
`;

exports[`Connection › Router > History dispatchs succeed when 'replace' (same history length) 1`] = `
Object {
  "hash": "",
  "pathname": "/wp-cat/nature/page/2",
  "search": "",
  "state": Object {
    "context": null,
    "method": "replace",
    "selectedItem": Object {
      "id": 7,
      "page": 2,
      "type": "category",
    },
    "type": "connection/ROUTE_CHANGE_SUCCEED",
  },
}
`;

exports[`Connection › Router > History dispatchs succeed when 'replace' (same history length) 2`] = `
Array [
  Object {
    "context": null,
    "method": "replace",
    "selectedItem": Object {
      "id": 7,
      "page": 2,
      "type": "category",
    },
    "type": "connection/ROUTE_CHANGE_SUCCEED",
  },
]
`;

exports[`Connection › Router > History ignores ROUTE_CHANGE_SUCCEED when replacing (history.length + 1) 1`] = `
Object {
  "hash": "",
  "pathname": "/wp-cat/nature/page/2",
  "search": "",
  "state": Object {
    "context": null,
    "method": "push",
    "selectedItem": Object {
      "id": 7,
      "page": 2,
      "type": "category",
    },
    "type": "connection/ROUTE_CHANGE_SUCCEED",
  },
}
`;

exports[`Connection › Router > History ignores ROUTE_CHANGE_SUCCEED when replacing (history.length + 1) 2`] = `
Array [
  Object {
    "context": null,
    "method": "push",
    "selectedItem": Object {
      "id": 7,
      "page": 2,
      "type": "category",
    },
    "type": "connection/ROUTE_CHANGE_SUCCEED",
  },
]
`;
